add save to local archive with common io